Decrease font size to avoid overlapping

--- a/frontend/css/nfsen-ng.css
+++ b/frontend/css/nfsen-ng.css
@@ -38,7 +38,7 @@ ul.nav-tabs {
 }
 
 #flowDiv .dygraph-ylabel {
-    font-size: 1.5rem;
+    font-size: 1rem;
 }
 
 #legend span {
